--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,300&family=Source+Sans+3:wght@400;500;600;700&display=swap');
 
-.container{
-    @apply  w-full md:max-w-3xl lg:max-w-5xl xl:max-w-6xl mx-auto px-6 md:px-4
+.container {
+    @apply w-full md:max-w-3xl lg:max-w-5xl xl:max-w-6xl mx-auto px-6 md:px-4
+}
+
+@layer base {
+    html {
+        font-family: 'Source Sans 3', sans-serif;
+    }
 }
